Merge current apache dev to my dev